# ZOGY

./: README.md  pyproject.toml  zogy.py
Config/: sex.config  swarp_css.config
zogy/: zogy.py
zogy/Config/: psfex.config  swarp_css.config
zogy/Settings/: Constants.py  Constants_css.py  Constants_meerlicht.py
